--- a/style.css
+++ b/style.css
@@ -315,16 +315,16 @@ h1 {
 
 
 .movie-poster {
-    width: 250px; /* Adjust this value as needed */
-    height: 300px; /* Adjust this value as needed */
+    width: 250px; 
+    height: 300px; 
     margin: 10px;
-    overflow: hidden; /* This prevents the image from spilling out */
+    overflow: hidden; 
   }
   
   .movie-poster img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* This property ensures the image covers the area without stretching */
-    object-position: center; /* This centers the image within the container */
-    transition: transform 0.3s ease; /* Optional: for a hover effect */
+    object-fit: cover; 
+    object-position: center; 
+    transition: transform 0.3s ease;
   }
